--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
